--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -92,6 +92,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                padding-bottom: 1rem;
             }
         }
     }
@@ -104,6 +105,9 @@
 }
 .down{
     animation: down 1s ease-in-out;
+    @include respond-to(mobiles){
+        animation: none;
+    }
 }
 @keyframes down {
     0%{
